test-resources/invalid-project/src/main/java/test/group/id/LRM.java
package test.group.id;

/**
 * ‎
 * Bidi characters above
 */
public class LRM
{
    public static void main( String[] args )
    {
        System.out.println( "Hello World!" );
    }
}
